Changes for 1.7.0

 - [ZBX-646] audit log entries added for screen edit actions (alexei)
 - [ZBX-645] after new installation, filter for audit log is set not to filter anything (alexei)
 - [ZBX-643] fixed no print data for bar reports (Artem)
 - [DEV-231] improved dynamic graph usability in slideshow screen (Artem)
 - [DEV-258] added additional reports based on bar graphs (Artem)
 - [DEV-257] added bar graph class (Artem)
 - [DEV-252] improved audit log of host groups,hosts,items and media types (Sasha)
 - [DEV-266] added support of octal and hexadecimal data (Sasha)
 - [DEV-253] improved audit log filtering (Artem)
 - [DEV-267] improved item template-update (Artem)
 - [DEV-261] added triggers status to screens (Artem)
 - [DEV-256] improved multiple labels in maps and support of macros (Sasha)
 - [DEV-265] added popups with links to "Status of trigger" & "Events history" pages (Artem)
 - [DEV-262] added group filtering  for "Trigger info" (Artem)
 - [DEV-259] added internal links (Artem)
 - [DEV-251] added improved screen editing (Artem)
 - [DEV-249] added support of advanced regular expressions (Artem,Sasha)
 - [DEV-247] added enhancement to the Graph function (Artem)
 - [DEV-233,DEV-237] added support of scheduled maintenance periods (Artem,Sasha)

Changes for 1.6.3

 - [ZBX-713] fixed "values per second" having too many decimal places (Alexei)
 - [ZBX-710] fixed duplicating entries in hosts groups after import (Artem)
 - [ZBX-709] improved item graph exporting (Artem)
 - [ZBX-712] fixed simple/advanced item filter switch (Alexei)
 - [ZBX-707] fixed sql error when filter items by host group (Alexei)
 - [ZBX-706] fixed element validation in sysmap elements (Artem)
 - [ZBX-705] improved {ESC.HISTORY} macro in recovery notifications (Sasha)
 - [ZBX-647] fixed audit log record for graph update action "added" -> "updated" (alexei)
 - [ZBX-700] fixed possible server crash when using {TRIGGER.NAME} for notifications (Sasha)
 - [DEV-286] improved zabbix main menu (Artem)